<resources>
    <string name="app_name">Rundomizer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sound_vibration">SoundVibration</string>
    <string name="title_activity_location_activity">LocationActivity</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="title_activity_main_activity_future">MainActivityFuture</string>
    <string name="distance_button">Distance</string>
    <string name="duration_button">Duration</string>
    <string name="kilometers">Km</string>
    <string name="duration">Duration</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="rundomize">Rundomize</string>
    <string name="title_activity_running">RunningActivity</string>
    <string name="title_activity_new_adventure"></string>
    <string name="date_time">Date: </string>
    <string name="speed">Avg Speed: </string>
    <string name="distance">Distance: </string>
    <string name="lap_duration">Duration: </string>
    <string name="past_runs">Past runs</string>

    <string-array name="prev_runs">
        <item>Select A Run</item>
        <item>12 Feb 2012</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
