<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/buttons_layout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <ToggleButton
            android:id="@+id/distance_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textOff="@string/distance_button"
            android:textOn="@string/distance_button" />

        <ToggleButton
            android:id="@+id/duration_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textOn="@string/duration_button"
            android:textOff="@string/duration_button" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/distance_picker_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttons_layout"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/kilometers"
                android:layout_gravity="center_horizontal" />

            <NumberPicker
                android:id="@+id/distance_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/duration_picker_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttons_layout"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <LinearLayout
                android:id="@+id/left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hours" />

                <NumberPicker
                    android:id="@+id/hours_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@id/left"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes" />

                <NumberPicker
                    android:id="@+id/minutes_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


    <Button
        android:id="@+id/rundomize_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/duration_picker_layout"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/rundomize" />


</RelativeLayout>